--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "0.18.0",
+    "lodash": "4.17.19",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.2.0",
